[gd_scene load_steps=4 format=3 uid="uid://rebtr2r2wcwv"]

[ext_resource type="Script" path="res://Scripts/random_timer.gd" id="1_isc3q"]
[ext_resource type="Script" path="res://Scripts/extract.gd" id="1_s0i2c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gbbj6"]
size = Vector2(196, 82)

[node name="Extract" type="Area2D"]
script = ExtResource("1_s0i2c")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gbbj6")

[node name="RandomTimer" type="Timer" parent="."]
script = ExtResource("1_isc3q")
min_time = 2.0
max_time = 5.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="RandomTimer" to="." method="_on_random_timer_timeout"]
